[FE,BE] Analyze inventory : inventory price, inventory category
