# gudangku/resources/views/analyze/inventory_category.blade.php
@@ -1,0 +1,4 @@
+<h3>The Category</h3>
+<p><b class='text-primary inventory_category'></b> is the category for <span class='inventory_name text-primary'></span>. In your inventory you have <span id='total_inventory_category'></span> inventory with same category 
+and the average price with for this category is <b id='inventory_price_avg_category'></b>.</p>
+<br>
