# gudangku/resources/views/analyze/inventory_price.blade.php
@@ -1,0 +1,5 @@
+<h3>The Price</h3>
+<p><span class='inventory_name text-primary'></span> have price about <b class='text-primary inventory_price'></b>. The highest price in your inventory is <b id='inventory_price_max'></b> 
+and the lowest is <b id='inventory_price_min'></b>. Meanwhile in average, <span class='inventory_name'></span>'s price are more <b class='text-primary' id='diff_price_status'></b> about <b id='diff_price_ammount'>Rp. [inventory_price]</b> 
+, the average price in you inventory is <b id='inventory_price_avg'></b>.</p>
+<br>
